--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <section class="calculator">
-        <input type="text" class="rezult" readonly
+        <input type="text" class="result" readonly
             placeholder="0">
         <br>
         <button class="deleteLast" >Dlt</button>
@@ -39,11 +39,10 @@
             <button class="minus" >-</button>
             <button class="multiply" >*</button>
             <button class="devide" >/</button>
-        </div>
-        <div class="opers">
-            <button id="id_zap" >.</button>
-        </div>
-        <button class="equal" >=</button>
+            <button class="zap" >.</button>
+        </div>     
+            <button class="equal" >=</button>
+
     </section>
 
     <script src="js/index.js"></script>
